// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: CreateBlogPostButton > Authorized Button 1`] = `
<div
  aria-label="Create Blog Post Button"
  class="
                    fixed
                    bottom-24
                    left-1/2 
                    z-10
                    md:left-[95%] 
                    -translate-x-1/2
                    translate-y-1/2
                "
>
  <div
    class="
                            absolute
                            w-64
                            min-h-0
                            h-12
                            -translate-y-full
                            -translate-x-1/2
                            left-1/2
                            md:-translate-x-full
                            md:left-full
                            overflow-hidden
                            -top-2
                        "
    style="height: 16rem;"
  >
    <div
      class="
                            top-full
                            absolute
                            w-full  
                            border-black
                            bg-gray-400
                            rounded-md
                            p-2
                            transition-all
                            after:absolute first-letter:
                            after:left-0
                            md:after:left-auto
                            after:right-0
                            after:my-0
                            after:mx-auto
                            after:w-0
                            after:h-0
                            after:border-t-[1rem]
                            after:border-solid
                            after:border-t-gray-400
                            after:border-l-[2rem]
                            after:border-r-[2rem]
                            after:border-x-transparent
                            after:transition-all
                        "
    >
      <p
        class="p-3 text-center md:text-left"
      >
        You do not have authorization to create posts
      </p>
    </div>
  </div>
  <button
    class="
                        bg-highlight-green hover:bg-gray-700 hover:scale-110 bg-highlight-green cursor-pointer transition-all 
                        aspect-square
                        w-16 
                        rounded-full 
                        after:block 
                        before:block 
                        after:bg-white 
                        before:bg-white
                        after:absolute 
                        before:absolute
                        after:top-1/2 
                        before:top-1/2 
                        after:left-1/2 
                        before:left-1/2 
                        after:-translate-x-1/2 
                        before:-translate-x-1/2 
                        after:-translate-y-1/2 
                        before:-translate-y-1/2 
                        after:h-8 
                        before:h-2 
                        after:w-2 
                        before:w-8 
                        after:transition-all 
                        before:transition-all 
                        "
  />
</div>
`;

exports[`Snapshot: CreateBlogPostButton > Hovering Authorized Button 1`] = `
<div
  aria-label="Create Blog Post Button"
  class="
                    fixed
                    bottom-24
                    left-1/2 
                    z-10
                    md:left-[95%] 
                    -translate-x-1/2
                    translate-y-1/2
                "
>
  <div
    class="
                            absolute
                            w-64
                            min-h-0
                            h-12
                            -translate-y-full
                            -translate-x-1/2
                            left-1/2
                            md:-translate-x-full
                            md:left-full
                            overflow-hidden
                            -top-2
                        "
    style="height: 16rem;"
  >
    <div
      class="
                            top-full
                            absolute
                            w-full  
                            border-black
                            bg-gray-400
                            rounded-md
                            p-2
                            transition-all
                            after:absolute first-letter:
                            after:left-0
                            md:after:left-auto
                            after:right-0
                            after:my-0
                            after:mx-auto
                            after:w-0
                            after:h-0
                            after:border-t-[1rem]
                            after:border-solid
                            after:border-t-gray-400
                            after:border-l-[2rem]
                            after:border-r-[2rem]
                            after:border-x-transparent
                            after:transition-all
                        "
    >
      <p
        class="p-3 text-center md:text-left"
      >
        You do not have authorization to create posts
      </p>
    </div>
  </div>
  <button
    class="
                        bg-highlight-green hover:bg-gray-700 hover:scale-110 bg-highlight-green cursor-pointer transition-all 
                        aspect-square
                        w-16 
                        rounded-full 
                        after:block 
                        before:block 
                        after:bg-white 
                        before:bg-white
                        after:absolute 
                        before:absolute
                        after:top-1/2 
                        before:top-1/2 
                        after:left-1/2 
                        before:left-1/2 
                        after:-translate-x-1/2 
                        before:-translate-x-1/2 
                        after:-translate-y-1/2 
                        before:-translate-y-1/2 
                        after:h-8 
                        before:h-2 
                        after:w-2 
                        before:w-8 
                        after:transition-all 
                        before:transition-all 
                        "
  />
</div>
`;

exports[`Snapshot: CreateBlogPostButton > Hovering Unauthorized Button 1`] = `
<div
  aria-label="Create Blog Post Button"
  class="
                    fixed
                    bottom-24
                    left-1/2 
                    z-10
                    md:left-[95%] 
                    -translate-x-1/2
                    translate-y-1/2
                "
>
  <div
    class="
                            absolute
                            w-64
                            min-h-0
                            h-12
                            -translate-y-full
                            -translate-x-1/2
                            left-1/2
                            md:-translate-x-full
                            md:left-full
                            overflow-hidden
                            -top-2
                        "
    style="height: 16rem;"
  >
    <div
      class="
                            top-0
                            absolute
                            w-full  
                            border-black
                            bg-gray-400
                            rounded-md
                            p-2
                            transition-all
                            after:absolute first-letter:
                            after:left-0
                            md:after:left-auto
                            after:right-0
                            after:my-0
                            after:mx-auto
                            after:w-0
                            after:h-0
                            after:border-t-[1rem]
                            after:border-solid
                            after:border-t-gray-400
                            after:border-l-[2rem]
                            after:border-r-[2rem]
                            after:border-x-transparent
                            after:transition-all
                        "
    >
      <p
        class="p-3 text-center md:text-left"
      >
        You do not have authorization to create posts
      </p>
    </div>
  </div>
  <button
    class="
                        bg-gray-200 cursor-not-allowed 
                        aspect-square
                        w-16 
                        rounded-full 
                        after:block 
                        before:block 
                        after:bg-white 
                        before:bg-white
                        after:absolute 
                        before:absolute
                        after:top-1/2 
                        before:top-1/2 
                        after:left-1/2 
                        before:left-1/2 
                        after:-translate-x-1/2 
                        before:-translate-x-1/2 
                        after:-translate-y-1/2 
                        before:-translate-y-1/2 
                        after:h-8 
                        before:h-2 
                        after:w-2 
                        before:w-8 
                        after:transition-all 
                        before:transition-all 
                        "
  />
</div>
`;

exports[`Snapshot: CreateBlogPostButton > Loading Button 1`] = `
<div
  aria-label="Create Blog Post Button"
  class="
                    fixed
                    bottom-24
                    left-1/2 
                    z-10
                    md:left-[95%] 
                    -translate-x-1/2
                    translate-y-1/2
                "
>
  <div
    class="inline-block animate-spin rounded-full border-solid border-current border-r-transparent align-[-0.125em] text-highlight-green motion-reduce:animate-[spin_1.5s_linear_infinite]"
    role="status"
    style="width: 4rem; height: 4rem; border-width: 0.3333333333333333rem;"
  >
    <span
      class="absolute -m-px h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 [clip:rect(0,0,0,0)]"
    />
  </div>
</div>
`;

exports[`Snapshot: CreateBlogPostButton > Unauthorized Button 1`] = `
<div>
  <div
    aria-label="Create Blog Post Button"
    class="
                    fixed
                    bottom-24
                    left-1/2 
                    z-10
                    md:left-[95%] 
                    -translate-x-1/2
                    translate-y-1/2
                "
  >
    <div
      class="
                            absolute
                            w-64
                            min-h-0
                            h-12
                            -translate-y-full
                            -translate-x-1/2
                            left-1/2
                            md:-translate-x-full
                            md:left-full
                            overflow-hidden
                            -top-2
                        "
      style="height: 16rem;"
    >
      <div
        class="
                            top-full
                            absolute
                            w-full  
                            border-black
                            bg-gray-400
                            rounded-md
                            p-2
                            transition-all
                            after:absolute first-letter:
                            after:left-0
                            md:after:left-auto
                            after:right-0
                            after:my-0
                            after:mx-auto
                            after:w-0
                            after:h-0
                            after:border-t-[1rem]
                            after:border-solid
                            after:border-t-gray-400
                            after:border-l-[2rem]
                            after:border-r-[2rem]
                            after:border-x-transparent
                            after:transition-all
                        "
      >
        <p
          class="p-3 text-center md:text-left"
        >
          You do not have authorization to create posts
        </p>
      </div>
    </div>
    <button
      class="
                        bg-gray-200 cursor-not-allowed 
                        aspect-square
                        w-16 
                        rounded-full 
                        after:block 
                        before:block 
                        after:bg-white 
                        before:bg-white
                        after:absolute 
                        before:absolute
                        after:top-1/2 
                        before:top-1/2 
                        after:left-1/2 
                        before:left-1/2 
                        after:-translate-x-1/2 
                        before:-translate-x-1/2 
                        after:-translate-y-1/2 
                        before:-translate-y-1/2 
                        after:h-8 
                        before:h-2 
                        after:w-2 
                        before:w-8 
                        after:transition-all 
                        before:transition-all 
                        "
    />
  </div>
</div>
`;
